# fountain-tools

./: .gitignore  README.md  TODO.txt  fountain-tools.code-workspace  fountain-tools.sln  package-lock.json  package.json  screenplay-tools.sln
cpp/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  libScreenplayTools.dylib  package-lock.json  package.json  tests
cpp/Testing/Temporary/: CTestCostData.txt
cpp/include/fountain_tools/: callback_parser.h  format_helper.h  fountain.h  parser.h  utils.h  writer.h
cpp/include/screenplay_tools/: screenplay.h  utils.h
cpp/include/screenplay_tools/fdx/: parser.h  writer.h
cpp/include/screenplay_tools/fountain/: callback_parser.h  format_helper.h  parser.h  writer.h
cpp/src/: callback_parser.cpp  format_helper.cpp  fountain_tools.cpp  parser.cpp  screenplay.cpp  utils.cpp  writer.cpp
cpp/src/fdx/: parser.cpp  writer.cpp  xml_helper.h
cpp/src/fountain/: callback_parser.cpp  format_helper.cpp  parser.cpp  writer.cpp
cpp/test/: main.cpp  test_callback_parser.cpp  test_format_helper.cpp  test_main.cpp  test_parser.cpp  test_utils.cpp  test_utils.h  test_writer.cpp
cpp/test/fdx/: test_parser.cpp
cpp/test/fountain/: test_callback_parser.cpp  test_format_helper.cpp  test_parser.cpp  test_writer.cpp
csharp/: package-lock.json  package.json
csharp/FountainTools/: CallbackParser.cs  FormatHelper.cs  Fountain.cs  FountainTools.csproj  Parser.cs  Writer.cs
csharp/FountainTools.Tests/: CallbackParserTest.cs  FormatHelperTest.cs  FountainTools.Tests.csproj  ParserTest.cs  WriterTest.cs
csharp/ScreenplayTools/: Screenplay.cs  ScreenplayTools.csproj
csharp/ScreenplayTools.Tests/: FDXTests.cs  ScreenplayTools.Tests.csproj
csharp/ScreenplayTools.Tests/FDX/: FDXTests.cs
csharp/ScreenplayTools.Tests/Fountain/: CallbackParserTest.cs  FormatHelperTest.cs  ParserTest.cs  WriterTest.cs
csharp/ScreenplayTools/FDX/: Parser.cs  Writer.cs
csharp/ScreenplayTools/Fountain/: CallbackParser.cs  FormatHelper.cs  Parser.cs  Writer.cs
examples/tests/: Boneyards.fountain  Character.fountain  Character.txt  Dialogue-Unmerged.txt  Lyrics.txt  PageBreak.fountain  SceneHeading.fountain  TitlePage.fountain  Transition.fountain  Transition.txt
javascript/: package-lock.json  package.json  rollup.config.js
javascript/src/: callbackParser.js  formatHelper.js  fountain.js  fountainTools.js  parser.js  screenplay.js  screenplayTools.js  writer.js
javascript/src/fdx/: parser.js  writer.js
javascript/src/fountain/: callbackParser.js  parser.js  writer.js
javascript/test/: callbackParser.test.js  formatHelper.test.js  fountainTools.test.js  parser.js  parser.test.js  testUtils.js  writer.test.js
javascript/test/fdx/: fdx.test.js
javascript/test/fountain/: callbackParser.test.js  formatHelper.test.js  parser.test.js  writer.test.js
python/: create_dist.py  package-lock.json  package.json  pyproject.toml  setup.cfg
python/src/fountain_tools/: callback_parser.py  format_helper.py  fountain.py  parser.py  writer.py
python/src/screenplay_tools/: screenplay.py
python/src/screenplay_tools/fdx/: parser.py  writer.py
python/src/screenplay_tools/fountain/: callback_parser.py  format_helper.py  parser.py  writer.py
python/tests/: test_callback_parser.py  test_format_helper.py  test_parser.py  test_writer.py
python/tests/fdx/: test_fdx.py
python/tests/fountain/: test_callback_parser.py  test_format_helper.py  test_parser.py  test_writer.py
tests/: Action-Merged.txt  Action-Unmerged.txt  Action.fountain  Append-output.fountain  Boneyards.txt  Character.fountain  Dialogue-Merged.txt  Dialogue-Unmerged.txt  Dialogue.fountain  Formatted.fountain  Formatted.txt  LineBreaks.fountain  LineBreaks.txt  Lyrics.fountain  Notes.fountain  Notes.txt  PageBreak.txt  Parenthetical.fountain  Parenthetical.txt  Scratch.txt  Sections.fountain  Sections.txt  SimpleCallbackParser.txt  Tags.fountain  Tags.txt  TestFDX-FD-Write-cpp.fdx  TestFDX-FD-Write-csharp.fdx  TestFDX-FD-Write-js.fdx  TestFDX-FD-Write-py.fdx  TestFDX-FD.fdx  TestFDX-FD.fountain  TestFDX-FI.fadein  TestFDX-FI.fdx  TestFDX-FI.fountain  TitlePage.txt  Transition.txt  UTF8-output.fountain  UTF8.fountain  UTF8.txt  Writer-output.fountain  (+1 more)
