[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fountain_tools"
version = "0.0.5"
description = "Utils for the Fountain scriptwriting format."
authors = [
  { name="wildwinter", email="ian@wildwinter.net" }
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["fountain", "script", "parser"]
license = { file="LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/wildwinter/fountain-tools"

[tool.setuptools]
package-dir = {"" = "src"}   # Our code is inside "src/" folder

[tool.setuptools.packages.find]
where = ["src"]             # So setuptools looks in "src/" for packages
