[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fountain-tools"
version = "0.0.7"
description = "Utils for the Fountain scriptwriting format."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name="wildwinter", email="ian@wildwinter.net" }
]
requires-python = ">=3.7"
keywords = ["fountain", "script", "parser"]
license = { file="LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/wildwinter/fountain-tools"
"Bug Tracker" = "https://github.com/wildwinter/fountain-tools/issues"

[tool.setuptools]
package-dir = {"" = "src"}   # Our code is inside "src/" folder

[tool.setuptools.packages.find]
where = ["src"]             # So setuptools looks in "src/" for packages
